adjust the dir struct and name

--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 This is a project about the solutions of book
-《Fundamentals of Data Structures in C》written by myself, 
+《Fundamentals of Data Structures in C》written by myc, 
 so there must be some solutions which aren't good enough, even have bugs. 
-If you want to help this project to be better, 
-please contact me by mycmessia@qq.com / mycmessia@gmail.com, thanks.
+If you want to help this project be better, 
+please contact me by mycmessia@qq.com || mycmessia@gmail.com, thanks.
