--- a/README
+++ b/README
@@ -1,8 +1,6 @@
-This is a project about the solutions of book
-《Fundamentals of Data Structures in C》written by myc, 
-so there must be some solutions which aren't good enough, even have bugs. 
-If you want to help this project be better, 
-please contact me by mycmessia@qq.com or mycmessia@gmail.com, thanks.
+This is a project written by myc about the solutions of book《Fundamentals of Data Structures in C language》in order to help people learn data structure easier and better.
+There must be some solutions that aren't good enough, even have bugs. 
+If you want to help this project be better, please contact me by mycmessia@qq.com  thanks.
 
 Coding Style and some tips:
 
