--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-This is a project written by myc about the solutions of book《Fundamentals of Data Structures in C language》in order to help people learn data structure easier and better.
+This is a project written by myc about the solutions of book《Fundamentals of Data Structures in C language》in order to help us learn data structure easier and better.
 There must be some solutions that aren't good enough, even have bugs. 
 If you want to help this project be better, please contact me by mycmessia@qq.com  thanks.
 
